--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-
+<script src="phonegap.js"></script>
 <div class='header'><h1>Home</h1></div>
 <div class='search-view'>
 <input class='search-key' type="text"/>
@@ -10,6 +10,7 @@
 <script src="lib/jquery-1.8.2.min.js"></script>
 <script src="js/storage/memory-store.js"></script>
 <script src="js/main.js"></script>
+
 
 </body>
 </html>
